        provided. Contributed by Bruno Harbulot.
      - Fixed bug preventing MessageBodyReader/Writer implementors 
        from being recognized as providers. 
        Contributed by Martin Krasser.
      - Fixed constructor DigestAuthenticator(Context,String,String)
        to properly take into account the "serverKey" parameter.
        Reported by Yang Xudong.

- 2.0 Release Candidate 3 (2010-04-23)
    - API changes
      - Replaced MemoryRealm#findRoles(Set<Group>, User) method by
        findRoles(Set<Group>), findRoles(Group) and findRoles(User)
        to clarify contract. Suggested by Brunon Harbulot.
      - Added proxy configuration to the internal client connector 
        (necessary for the sip connector).
      - Added "ftl" extension to MetadataService for FreeMarker 
        templates.
      - Keeped few MediaType constants for the GWT edition in order 
        to reduce size.
    - Bugs fixed
      - Fixed support of parameters with the MediaType class. The 
        name contains the the main and sub types, plus the parameters.
        Reported by Carsten Lohmann.
      - Fixed generation of GET request sent by the internal 
        connector just after a request with an entity.
      - Moved ServletUtils class introduced in RC2 into the 
        org.restlet.ext.servlet package.
      - Fixed potential NPE with the Extractor.
        Reported by Graham Smith.
      - Fixed parsing of "nc" parameter and fixed potential endless 
        loop in HttpDigestHelper. Reported by Mark Drew.
      - Fixed issues preventing multi-threaded usage of ClientResource
        and dynamic client proxies.
      - Fixed concurrency bug with annotated interfaces causing
        405 errors (method not allowed). Reported by Antonio Fiestas.
      - Fixed regression about the method filtering (ignore case).
        Reported by Jean-Baptiste Dusseaut.
      - Fixed bug in HttpDigestVerifier which didn't create the User
        into the request's ClientInfo property. 