@@ -62,13 +62,16 @@ public class HttpServerHelper extends BaseServerHelper {
 
     @Override
     public synchronized void start() throws Exception {
-        getLogger().info("Starting the default HTTP server");
+        getLogger()
+                .info(
+                        "Starting the NIO HTTP server on port "
+                                + getHelped().getPort());
         super.start();
     }
 
     @Override
     public synchronized void stop() throws Exception {
-        getLogger().info("Stopping the default HTTP server");
+        getLogger().info("Stopping the NIO HTTP server");
         super.stop();
     }
 
